ubuntu-release-upgrader (1:0.192.8) UNRELEASED; urgency=low

  * Use correct argument for frontend in kubuntu-devel-release-upgrade

 -- Jonathan Riddell <jriddell@ubuntu.com>  Tue, 09 Apr 2013 12:48:28 +0100

ubuntu-release-upgrader (1:0.192.7) raring; urgency=low

  * in doPostInitialUpdate return false if there is no cache (LP: #1127451)

 -- Brian Murray <brian@ubuntu.com>  Mon, 08 Apr 2013 14:23:32 -0700

ubuntu-release-upgrader (1:0.192.6) raring; urgency=low

  * No change rebuild to regenerate DevelReleaseAnnouncement.html

 -- Michael Terry <mterry@ubuntu.com>  Mon, 18 Mar 2013 13:23:37 -0400

ubuntu-release-upgrader (1:0.192.5) raring; urgency=low

  * Fix a couple path joins and bugs that prevented check-new-release-gtk
    from working.  (LP: #1094777)

 -- Michael Terry <mterry@ubuntu.com>  Tue, 22 Jan 2013 09:46:57 -0500

ubuntu-release-upgrader (1:0.192.4) raring; urgency=low

  * Ensure that partial upgrades are fully translated (LP: #1072828) thanks to
    Gabor Kelemen for the initial patch.
  * Remove code enabling apport since it is always running (LP: #1068874)
  * check-new-release-gtk: set the correct translation domain thanks to Gabor
    Kelemen for patch (LP: #1093697)
  * DistUpgradeController.py: call apport-bug with the binary package name not
    the source package name (LP: #1098001)
  * source_ubuntu-release-upgrader.py: set the crash database to Ubuntu to
    allow reporting of bugs even if the package does not seem to be official
    (LP: #1067542)

 -- Brian Murray <brian@ubuntu.com>  Fri, 11 Jan 2013 16:19:26 -0800

ubuntu-release-upgrader (1:0.192.3) raring; urgency=low

  * fix FTBFS if there are no __pycache__ dirs

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 14 Dec 2012 14:44:49 +0100

ubuntu-release-upgrader (1:0.192.2) raring; urgency=low

  [ Brian Murray ]
  * Call dpkg using the full path (LP: #1085844)

  [ Colin Watson ]
  * Remove calls to (currently) Python 2-only dh_auto_* (LP: #1089861).

  [ Michael Vogt ]