@@ -1,8 +1,13 @@
 ubuntu-release-upgrader (1:0.192.8) UNRELEASED; urgency=low
 
+  [ Jonathan Riddell ]
   * Use correct argument for frontend in kubuntu-devel-release-upgrade
 
- -- Jonathan Riddell <jriddell@ubuntu.com>  Tue, 09 Apr 2013 12:48:28 +0100
+  [ Barry Warsaw ]
+  * Fix UnboundLocalError caused by corner case in the Python 3 language
+    spec.  LP: #1102593
+
+ -- Barry Warsaw <barry@ubuntu.com>  Thu, 18 Apr 2013 13:36:32 -0400
 
 ubuntu-release-upgrader (1:0.192.7) raring; urgency=low
 
